[WFCORE-6206] Adding some logs, ensure that all files used by the test cases are removed